# 2022-2023

./: .gitignore  Readme.md
term_1/: CMakeLists.txt  Makefile  Program_autumn.txt  config.json  ploter.py  solver.cpp
term_1/wk_01/: Readme.md  TODO.txt  ex_10.cpp  ex_11.c  ex_3.cpp  ex_4.cpp  ex_5.cpp  ex_6.cpp  ex_7.cpp  ex_8.cpp  ex_9.cpp
term_1/wk_02/: 10_1.py  10_2.py  10_3.py  10_4.py  11.py  3.py  4.py  5.py  6.py  8.py  9.ipynb  Readme.md  TODO.txt
term_1/wk_03/: Readme.md  ploter.py  sol1.cpp  solver.cpp
term_1/wk_04/: Readme.md
term_1/wk_05/: Readme.md
term_1/wk_07/: Readme.md
term_1/wk_07/examples/: 7.cpp
term_1/wk_08/: Readme.md
term_1/wk_09/: Readme.md
term_1/wk_09/examples/: example.cpp  runner_example.ipynb
term_1/wk_10/: Readme.md
term_1/wk_11/: Readme.md
term_1/wk_12/: Readme.md
term_1/wk_13/: Readme.md
term_1/wk_14/: Readme.md
term_1/wk_14/sympy_examples/: sympy_example.py
term_2/wk_01/: Readme.md
term_2/wk_02/: Readme.md
term_2/wk_03/: Readme.md
term_2/wk_05/: Readme.md
term_2/wk_07/: Readme.md
term_2/wk_08/: Readme.md
